# income-check-app

./: .gitignore  Cargo.toml  README.md
src/: main.rs
ui/: appwindow.slint
